@@ -2,20 +2,22 @@ package edu.finalproject.hotproperty.controllers;
 
 import edu.finalproject.hotproperty.entities.*;
 import edu.finalproject.hotproperty.exceptions.InvalidFavoriteParameterException;
+import edu.finalproject.hotproperty.exceptions.InvalidMessageParameterException;
 import edu.finalproject.hotproperty.exceptions.InvalidPropertyParameterException;
-import edu.finalproject.hotproperty.repositories.UserRepository;
+import edu.finalproject.hotproperty.services.BuyerMessageService;
 import edu.finalproject.hotproperty.services.BuyerService;
 import edu.finalproject.hotproperty.services.FavoriteService;
 import edu.finalproject.hotproperty.services.PropertyService;
+import edu.finalproject.hotproperty.services.UserService;
 import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -23,8 +25,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
-import edu.finalproject.hotproperty.services.BuyerMessageService;
-import edu.finalproject.hotproperty.exceptions.InvalidMessageParameterException;
 
 @Controller
 public class BuyerController {
@@ -33,35 +33,30 @@ public class BuyerController {
 
   private final BuyerService buyerService;
   private final PropertyService propertyService;
-  private final UserRepository userRepository;
   private final FavoriteService favoriteService;
   private final BuyerMessageService buyerMessageService;
+  private final UserService userService;
+
   @Autowired
   public BuyerController(
       BuyerService buyerService,
       PropertyService propertyService,
-      UserRepository userRepository,
       FavoriteService favoriteService,
-      BuyerMessageService buyerMessageService) {
+      BuyerMessageService buyerMessageService,
+      UserService userService) {
     this.buyerService = buyerService;
     this.propertyService = propertyService;
-    this.userRepository = userRepository;
     this.favoriteService = favoriteService;
     this.buyerMessageService = buyerMessageService;
+    this.userService = userService;
   }
 
   @PreAuthorize("hasRole('BUYER')")
   @GetMapping("/favorites")
   public String viewFavoritesPage(@AuthenticationPrincipal UserDetails userDetails, Model model) {
-    User buyer =
-        userRepository
-            .findByEmail(userDetails.getUsername())
-            .orElseThrow(
-                () ->
-                    new UsernameNotFoundException("Buyer not found: " + userDetails.getUsername()));
+    User buyer = userService.getCurrentUser(userDetails);
     List<Favorite> favorites = favoriteService.getFavoritesByBuyer(buyer);
     model.addAttribute("favorites", favorites);
-
     return "buyer/favorites";
   }
 
@@ -72,12 +67,7 @@ public class BuyerController {
       @AuthenticationPrincipal UserDetails userDetails,
       RedirectAttributes redirectAttributes,
       HttpServletRequest request) {
-    User buyer =
-        userRepository
-            .findByEmail(userDetails.getUsername())
-            .orElseThrow(
-                () ->
-                    new UsernameNotFoundException("Buyer not found: " + userDetails.getUsername()));
+    User buyer = userService.getCurrentUser(userDetails);
     try {
       favoriteService.addFavorite(buyer, propertyId);
       redirectAttributes.addFlashAttribute("successMessage", "Property added to favorites!");
@@ -89,7 +79,6 @@ public class BuyerController {
           "errorMessage", "An unexpected error occurred while adding favorite.");
     }
     String referer = request.getHeader("Referer");
-    // redirect to previous page or property view
     return "redirect:" + (referer != null ? referer : "/properties/view/" + propertyId);
   }
 
@@ -100,12 +89,7 @@ public class BuyerController {
       @AuthenticationPrincipal UserDetails userDetails,
       RedirectAttributes redirectAttributes,
       HttpServletRequest request) {
-    User buyer =
-        userRepository
-            .findByEmail(userDetails.getUsername())
-            .orElseThrow(
-                () ->
-                    new UsernameNotFoundException("Buyer not found: " + userDetails.getUsername()));
+    User buyer = userService.getCurrentUser(userDetails);
     try {
       favoriteService.removeFavorite(buyer, propertyId);
       redirectAttributes.addFlashAttribute("successMessage", "Property removed from favorites.");
@@ -117,31 +101,30 @@ public class BuyerController {
           "errorMessage", "An unexpected error occurred while removing favorite.");
     }
     String referer = request.getHeader("Referer");
-    // if referer from favorites page, redirect to favorites page
     if (referer != null && referer.contains("/favorites")) {
       return "redirect:/favorites";
     }
     return "redirect:" + (referer != null ? referer : "/properties/view/" + propertyId);
   }
 
-
-
   @PreAuthorize("hasRole('BUYER')")
   @GetMapping("/messages/send/{propertyId}")
   public String showSendMessageForm(@PathVariable Long propertyId, Model model) {
     model.addAttribute("propertyId", propertyId);
+    Property property = propertyService.findWithImagesById(propertyId);
+    model.addAttribute("propertyTitle", property.getTitle());
     return "buyer/send_message";
   }
 
   @PreAuthorize("hasRole('BUYER')")
   @PostMapping("/messages/send/{propertyId}")
   public String sendMessage(
-          @PathVariable Long propertyId,
-          @RequestParam("content") String content,
-          @AuthenticationPrincipal UserDetails userDetails,
-          RedirectAttributes redirectAttributes) {
+      @PathVariable Long propertyId,
+      @RequestParam("content") String content,
+      @AuthenticationPrincipal UserDetails userDetails,
+      RedirectAttributes redirectAttributes) {
 
-    User buyer = buyerService.findByEmail(userDetails.getUsername());
+    User buyer = userService.getCurrentUser(userDetails);
 
     try {
       buyerMessageService.sendMessage(buyer, propertyId, content);
@@ -150,7 +133,8 @@ public class BuyerController {
       redirectAttributes.addFlashAttribute("errorMessage", e.getMessage());
     } catch (Exception e) {
       log.error("Error sending message for property {}: {}", propertyId, e.getMessage(), e);
-      redirectAttributes.addFlashAttribute("errorMessage", "An error occurred while sending message.");
+      redirectAttributes.addFlashAttribute(
+          "errorMessage", "An error occurred while sending message.");
     }
     return "redirect:/properties/view/" + propertyId;
   }
@@ -158,7 +142,7 @@ public class BuyerController {
   @PreAuthorize("hasRole('BUYER')")
   @GetMapping("/messages/inbox")
   public String viewBuyerMessages(@AuthenticationPrincipal UserDetails userDetails, Model model) {
-    User buyer = buyerService.findByEmail(userDetails.getUsername());
+    User buyer = userService.getCurrentUser(userDetails);
     List<Message> messages = buyerMessageService.getBuyerMessages(buyer);
     model.addAttribute("messages", messages);
     return "buyer/buyer_messages";
@@ -167,11 +151,11 @@ public class BuyerController {
   @PreAuthorize("hasRole('BUYER')")
   @PostMapping("/messages/delete/{messageId}")
   public String deleteMessage(
-          @PathVariable Long messageId,
-          @AuthenticationPrincipal UserDetails userDetails,
-          RedirectAttributes redirectAttributes) {
+      @PathVariable Long messageId,
+      @AuthenticationPrincipal UserDetails userDetails,
+      RedirectAttributes redirectAttributes) {
 
-    User buyer = buyerService.findByEmail(userDetails.getUsername());
+    User buyer = userService.getCurrentUser(userDetails);
     try {
       buyerMessageService.deleteMessage(buyer, messageId);
       redirectAttributes.addFlashAttribute("successMessage", "Message deleted successfully.");
@@ -179,11 +163,11 @@ public class BuyerController {
       redirectAttributes.addFlashAttribute("errorMessage", e.getMessage());
     } catch (Exception e) {
       log.error("Error deleting message {}: {}", messageId, e.getMessage(), e);
-      redirectAttributes.addFlashAttribute("errorMessage", "An error occurred while deleting message.");
+      redirectAttributes.addFlashAttribute(
+          "errorMessage", "An error occurred while deleting message.");
     }
     return "redirect:/messages/inbox";
   }
-
 
   @PreAuthorize("hasRole('BUYER')")
   @GetMapping("/properties/list")
@@ -215,41 +199,24 @@ public class BuyerController {
     Property property = propertyService.findWithImagesById(id);
     model.addAttribute("property", property);
 
-    List<String> imageFileName = property.getImages().stream()
-            .map(PropertyImage::getImageFileName)
-            .toList();
-    model.addAttribute("imageFileNames", imageFileName);
+    if (property.getImages() != null) {
+      List<String> imageFileNames =
+          property.getImages().stream()
+              .map(PropertyImage::getImageFileName)
+              .collect(Collectors.toList());
+      model.addAttribute("imageFileNames", imageFileNames);
+    }
 
     if (userDetails != null) {
-      User buyer = userRepository.findByEmail(userDetails.getUsername()).orElse(null);
-      if (buyer != null) {
-        boolean isFavorite = favoriteService.isPropertyFavorite(buyer, id);
-        model.addAttribute("isFavorite", isFavorite);
-      } else {
-        log.warn("Authenticated userDetails present but no matching buyer found: {}", userDetails.getUsername());
-        model.addAttribute("isFavorite", false);
-      }
+      User buyer = userService.getCurrentUser(userDetails);
+      boolean isFavorite = favoriteService.isPropertyFavorite(buyer, id);
+      model.addAttribute("isFavorite", isFavorite);
     } else {
-      log.warn("No authenticated userDetails found when accessing property details for property ID: {}", id);
+      log.warn(
+          "No authenticated userDetails found when accessing property details for property ID: {}",
+          id);
       model.addAttribute("isFavorite", false);
     }
     return "/buyer/property_details_view";
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
